--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
   "author": "Ritik Agarwal",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.1"
+    "ejs": "^3.1.3",
+    "express": "^4.17.1",
+    "express-ejs-layouts": "^2.5.0",
+    "mongoose": "^5.9.14"
   }
 }
