--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "prod_start":"set NODE_ENV=production&&node index.js"
+    "prod_start": "set NODE_ENV=production&&node index.js"
   },
   "keywords": [
     "social"
@@ -25,6 +25,7 @@
     "jsonwebtoken": "^8.5.1",
     "kue": "^0.11.6",
     "mongoose": "^5.9.14",
+    "morgan": "^1.10.0",
     "multer": "^1.4.2",
     "node-sass-middleware": "^0.11.0",
     "nodemailer": "^6.4.8",
@@ -32,6 +33,7 @@
     "passport-google-oauth": "^2.0.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
+    "rotating-file-stream": "^2.1.1",
     "socket.io": "^2.3.0"
   }
 }
