--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "prod_start": "NODE_ENV=production node index.js"
+    "prod_start": "set NODE_ENV=production&&node index.js"
   },
   "keywords": [
     "social"
